--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
     "date-fns/": "https://aistudiocdn.com/date-fns@^3.6.0/",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
     "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
-    "tslib": "https://aistudiocdn.com/tslib@^2.6.3"
+    "tslib": "https://aistudiocdn.com/tslib@^2.6.3",
+    "clsx": "https://aistudiocdn.com/clsx@^2.1.1"
   }
 }
 </script>
