--- a/index.html
+++ b/index.html
@@ -276,19 +276,20 @@
   "imports": {
     "@google/genai": "https://aistudiocdn.com/@google/genai@^0.15.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.44.4",
-    "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
-    "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
-    "react-big-calendar": "https://aistudiocdn.com/react-big-calendar@^1.13.1",
+    "clsx": "https://aistudiocdn.com/clsx@^2.1.1",
     "date-fns": "https://aistudiocdn.com/date-fns@^3.6.0",
     "date-fns/": "https://aistudiocdn.com/date-fns@^3.6.0/",
     "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
     "jspdf-autotable": "https://aistudiocdn.com/jspdf-autotable@^3.8.2",
-    "tslib": "https://aistudiocdn.com/tslib@^2.6.3",
-    "clsx": "https://aistudiocdn.com/clsx@^2.1.1"
+    "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-big-calendar": "https://aistudiocdn.com/react-big-calendar@^1.13.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react-is": "https://aistudiocdn.com/react-is@^19.0.0",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.4",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "recharts": "https://aistudiocdn.com/recharts@^3.3.0",
+    "tslib": "https://aistudiocdn.com/tslib@^2.6.3"
   }
 }
 </script>
